--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "codegen",
+  "version": "5.2.5",
+  "type": "module",
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "author": "Gatekeeper",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "express": "^4.21.1"
   }
 }
+
