--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.cjs"
   },
   "author": "Gatekeeper",
   "license": "GPL-3.0-or-later",
