--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "start": "node server.cjs"
+    "start": "node server.cjs",
+    "install": "npm install"
   },
   "author": "Gatekeeper",
   "license": "GPL-3.0-or-later",
